.provarCaches/00D410000011HE0EAM/objects/rstkf__glproctxn__c.object
<CustomObject>
    <description>glproctxn__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>LEFT( rstkf__glproctxn_desc__c , 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glproctxn_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>GL Transaction Groups</relationshipLabel>
        <relationshipName>glproctxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glproctxn_comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__glproctxn_desc__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glproctxn_gltxnrequiredind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GLTXN Process Still Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glproctxn_processid__c</fullName>
        <label>Program Process ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glproctxn_tranno__c</fullName>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__glproctxn_type__c</fullName>
        <label>Type</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glproctxn_usrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User</label>
        <referenceTo>rstkf__glusr__c</referenceTo>
        <relationshipLabel>GL Transaction Groups</relationshipLabel>
        <relationshipName>glproctxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>GL Transaction Group</label>
    <listViews>
        <fullName>rstkf__RS_GL_Transaction_Groups</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glproctxn_cmpno__c</columns>
        <columns>rstkf__glproctxn_tranno__c</columns>
        <columns>rstkf__glproctxn_desc__c</columns>
        <columns>rstkf__glproctxn_type__c</columns>
        <columns>rstkf__glproctxn_usrno__c</columns>
        <columns>rstkf__glproctxn_gltxnrequiredind__c</columns>
        <columns>rstkf__glproctxn_processid__c</columns>
        <columns>rstkf__glproctxn_comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>GL Transaction Groups</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Transaction Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>